# CRM-01

./: README.md  alembic.ini  pyproject.toml  zbpack.json
alembic/: env.py
alembic/versions/: 7aa1ead3d1a6_initial_schema.py  900905c4b92f_add_info_sessions_and_registrations.py  a7f9a88ccff5_initial_schema.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  communication.py  info_session.py  parent.py  student.py  user.py
app/routers/: auth.py  communications.py  follow_ups.py  info_sessions.py  pages.py  parents.py  students.py
app/schemas/: communication.py  info_session.py  parent.py  student.py  user.py
app/services/: auth.py  email.py  parent_detail.py
app/templates/: base.html  dashboard.html  login.html
app/templates/components/: navbar.html
app/templates/info_sessions/: detail.html  list.html
app/templates/parents/: detail.html  list.html
app/templates/students/: detail.html  list.html
scripts/: seed.py
