[project]
name = "school-crm"
version = "0.1.0"
description = "School CRM System"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.6.0",
]
